# ChangeLog for net-misc/dropbear
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/dropbear/ChangeLog,v 1.85 2012/02/24 18:24:24 vapier Exp $

*dropbear-2012.55 (24 Feb 2012)

  24 Feb 2012; Mike Frysinger <vapier@gentoo.org> +dropbear-2012.55.ebuild:
  Version bump.

  19 Nov 2011; Mike Frysinger <vapier@gentoo.org> dropbear-2011.54.ebuild:
  Bump to EAPI=4 so we can depend on zlib[static-libs] for USE=static #390959
  by Sven E..

*dropbear-2011.54 (08 Nov 2011)

  08 Nov 2011; Mike Frysinger <vapier@gentoo.org> +dropbear-2011.54.ebuild:
  Version bump.

  01 Jul 2011; Mike Frysinger <vapier@gentoo.org> dropbear-0.53.1.ebuild,
  +files/dropbear-0.53.1-link.patch:
  Add patch from upstream for crypt linking #357249 by J.Taimr.

  16 Apr 2011; Ulrich Mueller <ulm@gentoo.org> dropbear-0.52.ebuild,
  dropbear-0.52-r1.ebuild, dropbear-0.53.1.ebuild:
  Don't PROVIDE virtual/ssh, bug 361121.

*dropbear-0.53.1 (03 Mar 2011)

  03 Mar 2011; Mike Frysinger <vapier@gentoo.org> +dropbear-0.53.1.ebuild:
  Version bump.

*dropbear-0.53 (28 Feb 2011)

  28 Feb 2011; Mike Frysinger <vapier@gentoo.org> +dropbear-0.53.ebuild:
  Version bump.

*dropbear-0.52-r1 (20 Apr 2010)

  20 Apr 2010; Mike Frysinger <vapier@gentoo.org> dropbear-0.52.ebuild,
  +dropbear-0.52-r1.ebuild:
  Fix path to xauth #314645 by Jochen Schlick.

  05 Nov 2009; Raúl Porcel <armin76@gentoo.org> dropbear-0.52.ebuild:
  ia64/m68k/s390/sh/sparc stable wrt #282028

  02 Nov 2009; Jeroen Roovers <jer@gentoo.org> dropbear-0.52.ebuild:
  Stable for HPPA (bug #282028).

  31 Oct 2009; Brent Baude <ranger@gentoo.org> dropbear-0.52.ebuild:
  Marking dropbear-0.52 ppc64 for bug 282028

  24 Oct 2009; nixnut <nixnut@gentoo.org> dropbear-0.52.ebuild:
  ppc stable #282028

  20 Oct 2009; Markus Meier <maekke@gentoo.org> dropbear-0.52.ebuild:
  amd64/arm/x86 stable, bug #282028

  18 Oct 2009; Tobias Klausmann <klausman@gentoo.org> dropbear-0.52.ebuild: