@@ -13,23 +13,23 @@ EBUILD dropbear-0.52-r1.ebuild 2662 RMD160 cb63b1040355844d04b28b26f08d1a86b1bc9
 EBUILD dropbear-0.52.ebuild 2648 RMD160 b77e2243b21848977c1d547cec897bbf7dd8554b SHA1 2603737d7f8fe8a0977bcbd51ad8c3e477a53de2 SHA256 aa7f91459c82c8b180eba8e740afad782083dbe291e23c4a253756f3a086792f
 EBUILD dropbear-0.53.1.ebuild 2710 RMD160 49f854c71cb288a926baeee25f4190dcef1cb926 SHA1 b3da8d875b8ad0b076266cff8ef54a6bdf4ae54c SHA256 7fc64502b71abca7fb0009f46fa2bb5cef141ab81a588b6f3d75b07b2b37341e
 EBUILD dropbear-2011.54.ebuild 2364 RMD160 4a8a6007330fd86af4c00af1404c0bacab10794b SHA1 ae95623ad550aff3129eabfe6ca4d3dcbe20a289 SHA256 fdf8956f9d7f1efedca7e4331726de87bd30870f6580c68eb367b34c94f40680
-EBUILD dropbear-2012.55.ebuild 2364 RMD160 b3b0467637dd96a024e7d4fe0c25eefb0cc90932 SHA1 180c98ca020b42288a9a86f52820173c01756846 SHA256 9f3ba64d90181e3fc0049a470366a8d485f1d334d0f6429e306327a08b2cad38
-MISC ChangeLog 10936 RMD160 02ea5dff4075cf4503d43329ad6915c7bcadf1e0 SHA1 856b111bd4a2f6cc36b3b5201887b75f199b6fcb SHA256 3f093b1e45647302786d13945f42e4e7047b65bacea734a6fdd6a1881d6b31de
+EBUILD dropbear-2012.55.ebuild 2423 RMD160 3d05fefde05ba23cc08711f49741e5eaa9c15cec SHA1 ebdfd7311fa23f6ef474d0a4df0196758704e2f6 SHA256 3aa9ebcd7334f7ae33ab7851d12823f13a2cf5e53ee4318b06af331f71721968
+MISC ChangeLog 11064 RMD160 9e1d24e4df7fe71fcae256456aa2ee5e7a3ecc5f SHA1 91b04be28923a7aad08ef61f3960c4616d0620f4 SHA256 ab7e74b7375e2737588a693414877b606e6ae2b147112e43f926f971601f6cf7
 MISC metadata.xml 1535 RMD160 b952e11afa75b9db8d37003b87fc34e98aa1c817 SHA1 3292a14d570d524cca3b4823b864b32fabae07a5 SHA256 5394fdf87301c239a38e2f616f03ba1eaf25cdb43cdfb4c0db28555c7284fcda
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPR9XfAAoJELEHsLL7fEFWi/AQAMf6Hi/ZsGMFfy/GCFGGEtcw
-BqqiJ+Ybskh+6s/sFG0UAMVYVhwrxtalMSMJ1TxPeH3K6Fxy8+uABl8hGHra82ao
-0iULAPXQlgpH0FpxxcC+r/P8hN021hkLN/99e+XzXOdHDHJXC0qz0lzXqKfjJvxf
-M2Dxd+Jhikqq49D/0LOV1Pgz7ibUIZmUkCppdAnnOhpiGeMSxdVnTiwRwVq49nCd
-cJ8feDtmBAYaoeAzabWPZ+6TPKzc/KLQo5MssZ6Ji1L3F8nYJJKmJppTdSIhwXva
-LhgJvhMPOdzfDRcCDAIsFanS2eACyOyxMGSTUOfVeyTeZORp+eC6MrL5tRtPApMH
-XbtH2iKpwBHUA2qxOuCTbLnfFdJPQWhS7SS50MT911DAdl8JwMfMlpuE2NMQdl2m
-7yp8I35EDtvP832zVaqAHt8489jLkSU+c5mHUi2VMOVqfbI/H6y3TRbN9DuY+hu9
-4JBhxjTZCmtWNzkG47Ws53R050WVhfFKh9+GPKWvR3rVrCTI9KRvS4IXmQvRLOcw
-OdaSsHsmMN6JfKBWwZ1jek2w4iGIBE0s959IpMd0iMEkUe61dYoBq8Wm+Gs14AdQ
-nrXhqVsFnl5WJvhTFKhi8So4mj1ZDWKAi4FVoLJVayweqay5PAcEk1VRSG/Qef3s
-t4y8lAvu3sktHfY2t0O+
-=ZyTo
+iQIcBAEBAgAGBQJPSm5ZAAoJELEHsLL7fEFWoNoQAMU8UL/QudkvAEp6aPcOhJrK
+WKW2VR74UANl+yyaeAiUwDYdBiN30BQSK8RJ6BAkKruUZKXrvdnppsrQnSfcC+4V
+eBfWKpUD0LAbzOw+3ROHdoQMgZrNqAeq1jpn0xB/gFYjMJjdj0PVBBqf1/UTWLRl
+O43VT4Q22zWOrSFl1wI0+4acRwTfZM6WmP5E+v1Qo/inpCxW9fPg7GMG7L2Ipbwb
+haXTh/erLKlPVVW9z2HMN8xdRt2GY9tbUBYbMR2FZi6Vb8p2pqGi7JMKes4ItlWE
+yIbm/BJeULEKHe58ga0AUHX8Qtu81v02IDwViEI5aVGuUReWSBT+Sm9SRwxPx7Dh
+cUkwvqlDu4tx4bNkO3OmH2D8Ipn8/3z6WMY6f+66clm0SPWtsJBxHTfzI9ryczxn
+KRk3WK0X3RN6vN0G1KP77kgnjZEzT0WHnx2PNyNzvEwMT4WQpt1t3XE/QoRm5ORk
+u0D0kFnpiETdS3HxMTerlYEBCH7wndM4eXn3JocELTN+LAHFJVNYlNNkXElb3y3Q
+0h83CNewhh7FF5vb9kAfkyrC7EsWxUopG8uh7/vJqtoS0LTymTs82HWQ6R5xn3YH
+7W+a7Ww8DL04huMxe/15cv7XkWnS8BjQVxzv1XHOpuUY8TygB4SkFCjSz4O1yi/d
+4uUgXPewMEfzv2MyuMyl
+=u+vB
 -----END PGP SIGNATURE-----
